@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 nosqlbench
+ * Copyright (c) 2022-2023 nosqlbench
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,13 +26,13 @@ import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -42,72 +42,80 @@ public class NBIOTest {
 
     @Test
     public void testFullyQualifiedNameSearches() {
-        NBIO extensions = (NBIO) NBIO.all().name("foo.bar");
+        NBIO extensions = (NBIO) NBIO.all().pathname("foo.bar");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).containsExactly("foo.bar");
     }
 
     @Test
     public void testExpandWildcardAndExtensionsOnly() {
-        NBIO extensions = (NBIO) NBIO.all().name(".*").extension("foo","bar");
+        NBIO extensions = (NBIO) NBIO.all().pathname(".*").extensionSet("foo","bar");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).contains(".*.foo",".*.bar");
     }
 
     @Test
     public void testExpandNameAndAllSuffixesOnly() {
-        NBIO extensions = (NBIO) NBIO.all().name("foo.bar").extension("test1","test2");
+        NBIO extensions = (NBIO) NBIO.all().pathname("foo.bar").extensionSet("test1","test2");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).containsExactly("foo.bar.test1","foo.bar.test2");
     }
 
     @Test
     public void testExpandNamesAndExtensionsIfNotExtended() {
-        NBIO extensions = (NBIO) NBIO.all().name("foo").extension("baz","beez");
+        NBIO extensions = (NBIO) NBIO.all().pathname("foo").extensionSet("baz","beez");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).contains("foo.baz","foo.beez");
     }
 
     @Test
     public void testExpandNamesAndExtensionsAvoidsExtendedAlreadyExtended() {
-        NBIO extensions = (NBIO) NBIO.all().name("foo.baz").extension("baz","beez");
+        NBIO extensions = (NBIO) NBIO.all().pathname("foo.baz").extensionSet("baz","beez");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).contains("foo.baz","foo.beez");
     }
 
     @Test
     public void testExpandPrefixesAndFullName() {
-        NBIO extensions = (NBIO) NBIO.all().prefix("act1","act2").name("foo.bar");
+        NBIO extensions = (NBIO) NBIO.all().searchPrefixes("act1","act2").pathname("foo.bar");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
-        assertThat(searches).containsExactly("foo.bar");
+        assertThat(searches).containsExactly("foo.bar","act1/foo.bar","act2/foo.bar");
     }
 
     @Test
     public void testExpandAddExtensionNotNeeded() {
-        NBIO extensions = (NBIO) NBIO.all().name("foo.bar").extension("bar");
+        NBIO extensions = (NBIO) NBIO.all().pathname("foo.bar").extensionSet("bar");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).containsExactly("foo.bar");
-        NBIO extensionsDot = (NBIO) NBIO.all().name("foo.bar").extension(".bar");
+        NBIO extensionsDot = (NBIO) NBIO.all().pathname("foo.bar").extensionSet(".bar");
         LinkedHashSet<String> searchesDot = extensionsDot.expandNamesAndSuffixes();
         assertThat(searchesDot).containsExactly("foo.bar");
     }
 
     @Test
+    public void testExpandExtensionCosets() {
+        Set<String> paths = NBIO.expandSynonymPaths(List.of("abc123.tubas"), List.of(Set.of(".foo")));
+        assertThat(paths).isEqualTo(Set.of("abc123.tubas.foo"));
+        paths = NBIO.expandSynonymPaths(List.of("abc123.tubas","def.123"), List.of(Set.of(".456",".789",".123")));
+        assertThat(paths).isEqualTo(Set.of("abc123.tubas.123","abc123.tubas.456","abc123.tubas.789","def.123","def.456","def.789"));
+
+    }
+    @Test
     public void testExpandAddExtensionNeeded() {
-        NBIO extensions = (NBIO) NBIO.all().name("foo").extension("bar");
+        NBIO extensions = (NBIO) NBIO.all().pathname("foo").extensionSet("bar");
         LinkedHashSet<String> searches = extensions.expandNamesAndSuffixes();
         assertThat(searches).containsExactly("foo.bar");
-        NBIO extensionsDot = (NBIO) NBIO.all().name("foo").extension(".bar");
+        NBIO extensionsDot = (NBIO) NBIO.all().pathname("foo").extensionSet(".bar");
         LinkedHashSet<String> searchesDot = extensionsDot.expandNamesAndSuffixes();
         assertThat(searchesDot).containsExactly("foo.bar");
     }
 
     @Test
     public void testLoadCsv1Classpath() {
-        NBPathsAPI.GetPrefix forSourceType = NBIO.classpath();
-        NBPathsAPI.GetName nesteddir1 = forSourceType.prefix("nesteddir1");
-        NBPathsAPI.GetExtension getExtension = nesteddir1.name("nesteddir2/testcsv1");
-        NBPathsAPI.DoSearch forCsvExtension = getExtension.extension(".csv");
+        NBPathsAPI.GetPrefixes forSourceType = NBIO.classpath();
+        NBPathsAPI.GetPathname nesteddir1 = forSourceType.searchPrefixes("nesteddir1");
+        NBPathsAPI.GetExtensions getExtensions = nesteddir1.pathname("nesteddir2/testcsv1");
+        NBPathsAPI.DoSearch forCsvExtension = getExtensions.extensionSet(".csv");
         Optional<Content<?>> testcsv1 = forCsvExtension.first();
 
         assertThat(testcsv1).isNotPresent();
@@ -115,10 +123,10 @@ public class NBIOTest {
 
     @Test
     public void testLoadCsv1Filesystem() {
-        NBPathsAPI.GetPrefix forSourceType = NBIO.fs();
-        NBPathsAPI.GetName nesteddir1 = forSourceType.prefix("target/test-classes/nesteddir1");
-        NBPathsAPI.GetExtension getExtension = nesteddir1.name("nesteddir2/testcsv1");
-        NBPathsAPI.DoSearch forCsvExtension = getExtension.extension(".csv");
+        NBPathsAPI.GetPrefixes forSourceType = NBIO.fs();
+        NBPathsAPI.GetPathname nesteddir1 = forSourceType.searchPrefixes("target/test-classes/nesteddir1");
+        NBPathsAPI.GetExtensions getExtensions = nesteddir1.pathname("nesteddir2/testcsv1");
+        NBPathsAPI.DoSearch forCsvExtension = getExtensions.extensionSet(".csv");
         Optional<Content<?>> testcsv1 = forCsvExtension.first();
 
         assertThat(testcsv1).isNotPresent();
@@ -130,7 +138,7 @@ public class NBIOTest {
     @Test
     public void testClasspathTestResource() {
         List<List<Content<?>>> optionals =
-            NBIO.classpath().name("nesteddir1/nesteddir2/testcsv12.csv").resolveEach();
+            NBIO.classpath().pathname("nesteddir1/nesteddir2/testcsv12.csv").resolveEach();
         assertThat(optionals).hasSize(1);
         Content<?> content = optionals.get(0).get(0);
         assertThat(content).isNotNull();
@@ -139,9 +147,9 @@ public class NBIOTest {
     @Test
     public void testPathSearchForExtension() {
         List<Content<?>> list = NBIO.classpath()
-            .prefix("nesteddir1")
-            .name(".*.csv")
-            .extension("csv")
+            .searchPrefixes("nesteddir1")
+            .pathname(".*.csv")
+            .extensionSet("csv")
             .list();
         assertThat(list).hasSize(2);
     }
@@ -149,9 +157,9 @@ public class NBIOTest {
     @Test
     public void testPathSearchForExtensionMissing() {
         List<Content<?>> list = NBIO.classpath()
-            .prefix("nesteddir1")
-            .name(".*")
-            .extension("csv")
+            .searchPrefixes("nesteddir1")
+            .pathname(".*")
+            .extensionSet("csv")
             .list();
         assertThat(list).hasSize(2);
     }
@@ -159,9 +167,9 @@ public class NBIOTest {
     @Test
     public void testPathSearchForMultipleExtensions() {
         List<Content<?>> list = NBIO.classpath()
-            .prefix("nesteddir1")
-            .name(".*")
-            .extension("csv","txt")
+            .searchPrefixes("nesteddir1")
+            .pathname(".*")
+            .extensionSet("csv","txt")
             .list();
         assertThat(list).hasSize(3);
     }
@@ -169,9 +177,9 @@ public class NBIOTest {
     @Test
     public void testPathSearchForSuffix() {
         List<Content<?>> list = NBIO.classpath()
-            .prefix("nesteddir1")
-            .name("nesteddir2/testdata12")
-            .extension("txt")
+            .searchPrefixes("nesteddir1")
+            .pathname("nesteddir2/testdata12")
+            .extensionSet("txt")
             .list();
         assertThat(list).hasSize(1);
     }
@@ -179,8 +187,8 @@ public class NBIOTest {
     @Test
     public void testPathSearchInDifferentVantagePoints() {
         List<Path> list = NBIO.fs()
-            .prefix("target/test-classes/nesteddir1")
-            .extension("csv")
+            .searchPrefixes("target/test-classes/nesteddir1")
+            .extensionSet("csv")
             .list().stream().map(Content::asPath)
             .collect(Collectors.toList());
 
@@ -193,19 +201,19 @@ public class NBIOTest {
     @Test
     public void testLoadNamedFileAsYmlExtension() {
         List<Content<?>> list = NBIO.classpath()
-            .name("nesteddir1/nesteddir2/testworkload1")
-            .extension("yml")
+            .pathname("nesteddir1/nesteddir2/testworkload1")
+            .extensionSet("yml")
             .list();
         assertThat(list).hasSize(1);
 
         list = NBIO.classpath()
-            .name("nesteddir1/nesteddir2/testworkload1.yml")
+            .pathname("nesteddir1/nesteddir2/testworkload1.yml")
             .list();
         assertThat(list).hasSize(1);
 
         list = NBIO.classpath()
-            .name("nesteddir1/nesteddir2/testworkload1")
-            .extension("abc","yml")
+            .pathname("nesteddir1/nesteddir2/testworkload1")
+            .extensionSet("abc","yml")
             .list();
         assertThat(list).hasSize(1);
     }
@@ -214,15 +222,15 @@ public class NBIOTest {
     public void testLoadAllFilesUnderPath() {
         List<Content<?>> list = null;
 
-        list = NBIO.classpath().prefix("./").list();
+        list = NBIO.classpath().searchPrefixes("./").list();
         logger.debug("found " + list.size() + " entries for path '.'");
         assertThat(list).hasSizeGreaterThan(0);
 
-        list = NBIO.fs().prefix("./").list();
+        list = NBIO.fs().searchPrefixes("./").list();
         logger.debug("found " + list.size() + " entries for path '.'");
         assertThat(list).hasSizeGreaterThan(0);
 
-        list = NBIO.remote().prefix("./").list();
+        list = NBIO.remote().searchPrefixes("./").list();
         logger.debug("found " + list.size() + " entries for path '.'");
         assertThat(list).hasSize(0);
     }
@@ -230,17 +238,17 @@ public class NBIOTest {
     @Test
     public void test() {
         List<Content<?>> list = NBIO.fs()
-            .prefix(Paths.get("target/test-classes/").toString())
-            .name("gamma.yaml").list();
+            .searchPrefixes(Paths.get("target/test-classes/").toString())
+            .pathname("gamma.yaml").list();
         assertThat(list).hasSize(1);
     }
 
     @Test
     public void testWildcardFilenameMatch() {
         NBPathsAPI.DoSearch gammasSearch = NBIO.all()
-            .prefix(Paths.get("target/test-classes/").toString())
-            .name(".*gamma")
-            .extension("yaml");
+            .searchPrefixes(Paths.get("target/test-classes/").toString())
+            .pathname(".*gamma")
+            .extensionSet("yaml");
         List<Content<?>> gammas = gammasSearch.list();
         assertThat(gammas).hasSize(3);
     }
@@ -249,33 +257,57 @@ public class NBIOTest {
     @Test
     public void testSpecificFilenameMatch() {
         NBPathsAPI.DoSearch gammasSearch = NBIO.all()
-            .prefix(Paths.get("target/test-classes/").toString())
-            .name("gamma")
-            .extension("yaml");
+            .searchPrefixes(Paths.get("target/test-classes/").toString())
+            .pathname("gamma")
+            .extensionSet("yaml");
         List<Content<?>> gammas = gammasSearch.list();
         assertThat(gammas).hasSize(1);
     }
 
     @Test
-    public void onlyMatchExtensionFilesWhenExtensionsProvided() {
+    public void matchOneWithoutTryingPrefixesFirst() {
+        Content<?> result = NBIO.all()
+            .searchPrefixes(
+                Paths.get("target/test-classes/nesteddir1/nesteddir2").toString()
+            )
+            .pathname("nesteddir1/alpha-gamma.yaml")
+            .one();
+        assertThat(result).isNotNull();
+        assertThat(result.getURI().toString()).matches(".*?[^1]/nesteddir1/alpha-gamma.yaml");
+    }
+
+    @Test
+    public void matchOneFallsThroughToPrefixesSecond() {
+        Content<?> result = NBIO.all()
+            .searchPrefixes(
+                Paths.get("target/test-classes/nesteddir1/nesteddir2").toString()
+            )
+            .pathname("alpha-gamma.yaml")
+            .one();
+        assertThat(result).isNotNull();
+        assertThat(result.getURI().toString()).matches(".*?nesteddir1/nesteddir2/alpha-gamma.yaml");
+    }
+
+    @Test
+    public void onlyMatchExtensionFilesWhenExtensionInCoset() {
 
         // This search is invalid because by providing extensions, all results
         // are required to match one of the extensions, thus the only valid
         // match here would be alpha-gamma.yaml.js
         NBPathsAPI.DoSearch invalidSearch = NBIO.all()
-            .prefix(Paths.get("target/test-classes/").toString())
-            .name("alpha-gamma.yaml")
-            .extension("js");
+            .searchPrefixes(Paths.get("target/test-classes/").toString())
+            .pathname("alpha-gamma.yaml")
+            .extensionSet("js");
 
         NBPathsAPI.DoSearch validSearch1 = NBIO.all()
-            .prefix(Paths.get("target/test-classes/").toString())
-            .name("alpha-gamma")
-            .extension("js");
+            .searchPrefixes(Paths.get("target/test-classes/").toString())
+            .pathname("alpha-gamma")
+            .extensionSet("js");
 
         NBPathsAPI.DoSearch validSearch2 = NBIO.all()
-            .prefix(Paths.get("target/test-classes/").toString())
-            .name("alpha-gamma.js")
-            .extension();
+            .searchPrefixes(Paths.get("target/test-classes/").toString())
+            .pathname("alpha-gamma.js")
+            .extensionSet();
 
 
         assertThat(invalidSearch.list()).hasSize(0);
@@ -292,12 +324,13 @@ public class NBIOTest {
             File tempFile = File.createTempFile(tmpdir.toString(), "testfile.csv");
             tempFile.deleteOnExit();
             String fullpath = tempFile.getAbsolutePath();
-            Files.write(Path.of(fullpath), "COL1,COL2\n\"val1\",\"val2\"\n".getBytes(StandardCharsets.UTF_8));
-            List<Content<?>> results = NBIO.all().name(fullpath).list();
+            Files.writeString(Path.of(fullpath), "COL1,COL2\n\"val1\",\"val2\"\n");
+            List<Content<?>> results = NBIO.all().pathname(fullpath).list();
             assertThat(results.size()).isEqualTo(1);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
     }
+
 
 }
